# otus_homework3

./: .gitignore  CMakeLists.txt
.github/workflows/: build-and-release.yml
src/: main.cpp
